# pygwalker

./: .gitignore  .gitmodules  .pylintrc  AGENTS.md  CITATION.cff  CLAUDE.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  a.py  compile.sh  environment.yml  jupyter_demo.ipynb  pyproject.toml  refactor_plan.md  setup.py  test.ipynb
.github/ISSUE_TEMPLATE/: any-questions-topics-you-want-to-share.md  bug_report.md
.github/workflows/: auto-ci.yml  node.js.yml  publish.yml  streamlit.yml
app/: .gitignore  components.json  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
app/lib/: auth-wrapper-v0.1.0.tgz  auth-wrapper-v0.1.3.tgz  auth-wrapper-v0.1.4.tgz
app/src/: index.css  index.tsx
app/src/components/: defaultTab.tsx  loadingIcon.tsx  modal.tsx  options.tsx
app/src/components/button/: base.ts  default.tsx  primary.tsx
app/src/components/codeExportModal/: index.tsx  saveConfigButton.tsx  usePythonCode.ts
app/src/components/initModal/: index.tsx
app/src/components/loadDataModal/: index.tsx
app/src/components/preview/: index.tsx
app/src/components/runcellBanner/: index.tsx
app/src/components/shareModal/: index.tsx
app/src/components/ui/: button.tsx  dialog.tsx  select.tsx  tabs.tsx
app/src/components/uploadChartModal/: index.tsx
app/src/dataSource/: index.ts  index.tsx
app/src/interfaces/: comm.generated.ts  index.ts
app/src/lib/: dslToWorkflow.ts  vegaToDsl.ts
app/src/notify/: index.tsx
app/src/store/: common.ts  communication.ts  context.ts
app/src/tools/: exportDataframe.tsx  exportTool.tsx  loginTool.tsx  openDesktop.tsx  runcellTool.tsx  saveTool.tsx  shareTool.tsx  uploadChartTool.tsx  uploadTool.tsx
app/src/tunnel/: index.ts
app/src/utils/: comm.ts  communication.ts  communication.tsx  context.tsx  formatSpec.ts  graphicWalkerParser.ts  initDslWasm.ts  save.ts  screenshot.ts  theme.ts  tracker.ts  userConfig.ts
app/tests/: gwalker-smoke.spec.ts
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.ru.md  README.tr.md  README.zh.md  RELEASE_0_6.md
examples/: README.md  dash_demo.py  gradio_demo.py  gw_config.json  html_demo.py  jupyter_demo.ipynb  marimo_demo.py  reflex_demo.py  rxconfig.py  streamlit_demo.py  web_server_demo.py
examples/reflex_demo/: .gitignore  README.md  __init__.py  reflex_demo.py  rxconfig.py
examples/reflex_demo/app/: __init__.py  app.py
pygwalker/: __init__.py  __main__.py  __version__.py  _constants.py  _typing.py  base.py  errors.py  gwalker.py  py.typed  spec.py
pygwalker/adapter/: render.py  table.py  utils.py  walk.py
pygwalker/api/: _walker_reuse.py  adapter.py  anywidget.py  component.py  gradio.py  gwalker.py  html.py  jupyter.py  kanaries_cloud.py  marimo.py  pygwalker.py  reflex.py  repl.py  streamlit.py  walker.py  webserver.py  webview.py
pygwalker/common/: types.py
pygwalker/communications/: anywidget_comm.py  base.py  gradio_comm.py  hacker_comm.py  protocol.py  reflex_comm.py  streamlit_comm.py
pygwalker/data_parsers/: base.py  cloud_dataset_parser.py  database_parser.py  modin_parser.py  pandas_parser.py  polars_parser.py  pyarrow_parser.py  spark_parser.py
pygwalker/props_parsers/: base.py  modin_parser.py  pandas_parser.py  polars_parser.py
pygwalker/renderers/: base.py  pyplot.py
pygwalker/services/: anywidget_widget.py  calculation.py  chart_export.py  check_update.py  cloud_communication.py  cloud_service.py  comm_handler.py  config.py  data_bridge.py  data_communication.py  data_parsers.py  data_upload_communication.py  desktop_communication.py  desktop_import.py  fname_encodings.py  format_invoke_walk_code.py  global_var.py  jupyter_display.py  kaggle.py  kanaries_cli_login.py  preview_image.py  props.py  props_builder.py  props_parsers.py  props_tracker.py  render.py  render_manager.py  spec.py  spec_communication.py  spec_manager.py  streamlit_components.py  tip_tools.py  track.py  upload_data.py
pygwalker/templates/: .gitignore  graphic-walker.iife.js  graphic-walker.umd.js  gw_chart_preview.js  gw_preview.js  index.html  init_calc_wasm.js  jupyter_iframe_message.html  preview.html  preview_iframe.html  preview_list.html  pygwalker_iframe.html  pygwalker_main_page.html  tailwind.js  walk.js
pygwalker/utils/: __init__.py  check_update.py  check_walker_params.py  computation.py  config.py  custom_sqlglot.py  dependencies.py  display.py  dsl_transform.py  encode.py  estimate_tools.py  execute_env_check.py  fname_encodings.py  format_invoke_walk_code.py  free_port.py  frontend_assets.py  global_var.py  gwalker_props.py  log.py  payload_to_sql.py  pydantic_compat.py  randoms.py  render.py  runtime_env.py  spec.py
pygwalker_tools/metrics/: __init__.py  api.py  core.py
pygwalker_utils/: __main__.py  config.py  defaults.json
scripts/: build.py  ci_run_pytest.py  compile.sh  dev.py  develop.sh  gen_dsl_to_sql_wasm.sh  generate_comm_protocol_ts.py  local_ci.py  pypi.sh  test-init.py  test-init.sh
tests/: README.md  bike_sharing_dc.csv  develop.ipynb  field-spec.ipynb  main-modin.ipynb  main-polars.ipynb  main.ipynb  offline.ipynb  streamlit.py  stress-test-polars.ipynb  stress-test.ipynb  test_calculation.py  test_check_update.py  test_ci_workflow.py  test_cloud_communication.py  test_communication_transports.py  test_component_api.ipynb  test_computation.py  test_data_bridge.py  test_data_communication.py  test_data_parsers.py  test_data_upload_communication.py  test_desktop_communication.py  test_desktop_import.py  test_dsl_transform.py  test_fname_encodings.py  test_format_invoke_walk_code.py  test_frontend_assets.py  test_frontend_contracts.py  test_integration_apis.py  test_metrics_tools.py  test_preview_image.py  test_privacy_notice.py  test_public_spec_api.py  test_pydantic_compat.py  test_pygwalker_core.py  test_pyproject_metadata.py  test_readme_api_reference.py  test_repo_hygiene.py  test_spec_communication.py  (+5 more)
tutorials/: README.md  pygwalker_complete_tutorial.ipynb
(+1 files in other folders)
