[project]
name = "pygwalker"
dynamic = ["version"]
requires-python = ">=3.6"
description = "pygwalker: Combining Jupyter Notebook with a Tableau-like UI"
authors = [ { name = "Asm.Def", email = "woojson@zju.edu.cn" } ]
license-files = { paths = ["LICENSE"] }
readme = "README.md"
keywords = [ 'visualization', 'pandas', 'data-analysis', 'tableau', 'data-exploration', 'dataframe', 'tableau-alternative', 'jupyter' ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "jinja2",
    "ipython",
    "astor",
    "typing_extensions",
    "ipywidgets",
    "pydantic"
]
[project.urls]
homepage = "https://github.com/Kanaries/pygwalker"
repository = "https://github.com/Kanaries/pygwalker"
# changelog, documentation

[project.optional-dependencies]
pandas = ["pandas"]
polars = ["polars"]
streamlit = ["streamlit"]
notebook = [
    "jupyter-client<=7.4.9,>6.0.0",
    "jupyter-server<=2.5.0",
    "ipywidgets<8.0.0,>7.0.0"
]
labv4 = [
    "jupyter-client>7.4.9",
    "jupyter-server>2.5.0",
    "ipywidgets>=8.0.0"
]
all = [
    "pygwalker[pandas,polars,streamlit]",
]
dev = [
    "build",
    "twine",
]
[project.scripts]
pygwalker = "pygwalker_utils.__main__:main"

[tool.hatch]
# metadata = { allow-direct-references = true }
version = { path = "pygwalker/__init__.py" }

[tool.hatch.build]
include = [
    "pygwalker",
    "pygwalker_utils",
    "pygwalker/templates/**",
    "pygwalker/templates/**/*",
]
exclude = [ "/graphic-walker", "/tests" ]
artifacts = [ "pygwalker/templates/*" ]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["pygwalker/templates/dist/pygwalker-app.iife.js"]
skip-if-exists = ["pygwalker/templates/dist/pygwalker-app.iife.js"]
# install-pre-commit-hook = true
optional-editable-build = true

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "app"
build_dir = "./build"
build_cmd = "build"

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
path = "app"
build_dir = "./build"
build_cmd = "dev"


[tool.hatch.build.targets.wheel]
# force-include = 
shared-data = { "pygwalker_utils/defaults.json" = "etc/pygwalker/config.json" }

[tool.hatch.build.targets.sdist]
include = [
    "README.md", "LICENSE",
    "app",
    "pygwalker",
    "pygwalker_utils",
    "pygwalker/templates/**",
    "pygwalker/templates/**/*",
    "scripts",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
